--- a/versi 1/Dimsum.css
+++ b/versi 1/Dimsum.css
@@ -29,7 +29,7 @@ b {
     position: relative;
     height: 100vh;
     background-size: cover;
-    background-image: url("./Bahan/Foto/dim-sum.jpg.rendition.jpg");
+    background-image: url("./Bahan/Foto/background.jpg");
 }
 
 .welcome-text {
@@ -102,7 +102,7 @@ hr {
     width: 80%;
     max-width: 24em;
     margin: 1em auto;
-    text-align: justify;
+    text-align: center;
 }
 
 .title-portofolio, .title-contact-us {
