--- a/versi 1/Dimsum.css
+++ b/versi 1/Dimsum.css
@@ -134,6 +134,24 @@ hr {
     margin-bottom: 2em;
 }
 
+.send_form {
+    color: white;
+    background: blue;
+    text-decoration: none;
+    display: inline-block;
+    padding: 10px 25px;
+    border-radius: .3rem;
+    font-weight: 700;
+    letter-spacing: .5px;
+    font-size: 15px;
+    text-align: center;
+    transition-duration: 1s;
+}
+
+.send_form:hover {
+    background-color: cyan;
+}
+
 .form-contact-us, .contact-info {
     width: 100%;
     text-align: center;
